Include feedback of DANTE event
- fix extensions to .LANG.KIND.tex (have the file type at the end)
- add test cases
- fix hyperref vs. cleveref

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -38,17 +38,17 @@
   draft=false
 ]{scrbook}
 
-<%- include('microtype.preamble.en', this); %>
-<%- include('babel.preamble', this); %>
-<%- include('url.preamble.de', this); %>
-<%- include('hyperref.preamble.en', this); %>
-<%- include('cleveref.preamble.de', this); %>
+<%- include('microtype.de.preamble.tex', this); %>
+<%- include('babel.preamble.tex', this); %>
+<%- include('url.de.preamble.tex', this); %>
+<%- include('hyperref.en.preamble.tex', this); %>
+<% if (cleveref) { %><%- include('cleveref.de.preamble.tex', this); %><% } -%>
 
 \begin{document}
 
 \<%= heading1 %>{LaTeX Hinweise}
 \label{chap:latexhints}
 
-<%- include('figure.example.de', this); %>
+<%- include('figure.de.example.tex', this); %>
 
 \end{document}
