--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -25,11 +25,11 @@
   draft=false
 ]{scrbook}
 
-<%- include('microtype.preamble.en', this); %>
-<%- include('babel.preamble', this); %>
-<%- include('url.preamble.en', this); %>
-<% if (cleveref) { %><%- include('hyperref.preamble.en', this); %><% } -%>
-<%- include('cleveref.preamble.en', this); %>
+<%- include('microtype.en.preamble.tex', this); %>
+<%- include('babel.preamble.tex', this); %>
+<%- include('url.en.preamble.tex', this); %>
+<%- include('hyperref.en.preamble.tex', this); %>
+<% if (cleveref) { %><%- include('cleveref.en.preamble.tex', this); %><% } -%>
 
 \begin{document}
 
@@ -54,6 +54,6 @@ Please do \textit{not} use two backslashes for new paragraphs.
 For instance, this sentence belongs to the same paragraph, whereas the last one started a new one.
 A long motivation for that is provided at \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
 
-<%- include('figure.example.en', this); %>
+<%- include('figure.en.example.tex', this); %>
 
 \end{document}
