Added summary of scientific method to introduction.

--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,17 @@ Your third committee member (usually the external member)\par
 \chapter{Introduction}\label{sec:introduction}
 %%% ===============================================================================
 
-\textsf{Purpose and scope}. The introduction chapter is a summary of your work that shall be readable by the entire scientific community of your scientific field. A reader must be able to comprehend what you have done in your study by reading the introduction and the introduction alone. Only if they think they are not convinced or they need more details to reproduce your study, they shall have to read further.
+\textsf{Purpose and scope}. The purpose of your entire report is to make a \textbf{scientific argument} along the scientific method. Your argument has the following steps that all must come in this order.
+\begin{enumerate}
+    \item Clearly and precisely  \textbf{formulate a research problem or hypothesis}.
+    \item \textbf{Explicate the assumptions and state of the art} on which you are going to conduct your research to investigate your research problem/test the hypothesis. 
+    \item \textbf{Describe the (research) method} that you followed to investigate the problem / to test the hypothesis in a way that \textbf{allows someone else to reproduce your steps}. The method must includes steps and criteria for evaluating whether you answered your question successfully or not.
+    \item \textbf{Provide execution details} on how you followed the method in the given, specific situation.
+    \item \textbf{Report your results} by describing and summarizing your measurements. You must not interpret your results.
+    \item \textbf{Now interpret your results} by contextualizing the measurements and drawing conclusion that lead to answering your research problem or defining further follow-up research problems.
+\end{enumerate}
+
+The introduction chapter is a summary of your work and scientific method that shall be readable by everyone in your scientific field, e.g. everyone in Data Science. A reader must be able to comprehend what you have done in your study (understand your entire scientific argument from start to end) by reading the introduction and the introduction alone. Only if they think they are not convinced or they need more details to reproduce your study, they shall have to read further. The individual chapters and sections provide the details for each of the steps in your scientific argument.
 
 % ---------------------------------------------------------------------------------
 \section{Context and Topic}\label{sec:introduction:topic}
@@ -80,7 +90,7 @@ At the end of this section, you have explained and established a general goal th
 
 You have to provide citations/literature references for each of the statements and claims you are making. This section is usually a summary of the related work discussion in Chapter~\ref{sec:background}.
 
-At the end of this section, you have established a knowledge-gap between the state of the art and the general objective you developed in Sect.~\ref{sec:introduction:topic}.
+At the end of this section, you have established a \emph{knowledge gap} between the state of the art and the general objective you developed in Sect.~\ref{sec:introduction:topic}. \textbf{Stating a (knowledge) gap between a status quo and a desired situation is the \emph{first step} of a writing scientific argument.} 
 
 
 % ---------------------------------------------------------------------------------
@@ -110,7 +120,7 @@ The section is most readable if you give each of the steps in your method its ow
 \section{Results}\label{sec:introduction:results}
 % ---------------------------------------------------------------------------------
 
-You close the introduction by clearly stating the findings of your work, i.e., which new results did you obtain, what are the limitations?
+You close the introduction by clearly stating the findings of your work, i.e., which new results did you obtain, how do you interpret them, what are the limitations?
 
 
 %%% ===============================================================================
