Refine README.md and add support for font selection

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -28,6 +28,7 @@
 <%- include('microtype.en.preamble.tex', this); %>
 <%- include('babel.preamble.tex', this); %>
 <%- include('url.en.preamble.tex', this); %>
+<%- include('font.en.preamble.tex', this); %>
 <%- include('hyperref.en.preamble.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.en.preamble.tex', this); %><% } -%>
 
