heading1 is now with \ - and refine index.js

--- a/generators/app/templates/babel.preamble.tex
+++ b/generators/app/templates/babel.preamble.tex
@@ -1,6 +1,6 @@
-% Set <% if (lang === "en") { %>English<% } else { %>German<% } %> as language and allow to write hyphenated"=words
+% Set <% if (language === "en") { %>English<% } else { %>German<% } %> as language and allow to write hyphenated"=words
 %
-<% if (lang === "de") { -%>
+<% if (language === "de") { -%>
 \usepackage[english,main=ngerman]{babel}
 <% } else { -%>
 %
