--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -5,32 +5,32 @@
 % -*- coding:utf-8 mod:LaTeX -*-
 
 <% if (documentclass === 'scientific-thesis') { %>
-% EN: The following package allows \\ at the title page
-%     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
+% The following package allows \\ at the title page
+% For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } %>
 
 <% if (latexcompiler !== 'lualatex') { %>
-%DE: Neue deutsche Trennmuster
-%    Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
-%    Nur für pdflatex, nicht für lualatex
+% Neue deutsche Trennmuster
+% Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
+% Nur für pdflatex, nicht für lualatex
 \RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
 <% } %>
 
 \documentclass[
   % fontsize=11pt is the standard
-  %()Aus scrguide.pdf - der Dokumentation von KOMA-Script)
-  %Nach DUDEN steht in Gliederungen, in denen ausschließlich arabische Ziffern für die Nummerierung
-  %verwendet werden, am Ende der Gliederungsnummern kein abschließender Punkt
-  %(siehe [DUD96, R3]). Wird hingegen innerhalb der Gliederung auch mit römischen Zahlen
-  %oder Groß- oder Kleinbuchstaben gearbeitet, so steht am Ende aller Gliederungsnummern ein
-  %abschließender Punkt (siehe [DUD96, R4])
+  % ()Aus scrguide.pdf - der Dokumentation von KOMA-Script)
+  % Nach DUDEN steht in Gliederungen, in denen ausschließlich arabische Ziffern für die Nummerierung
+  % verwendet werden, am Ende der Gliederungsnummern kein abschließender Punkt
+  % (siehe [DUD96, R3]). Wird hingegen innerhalb der Gliederung auch mit römischen Zahlen
+  % oder Groß- oder Kleinbuchstaben gearbeitet, so steht am Ende aller Gliederungsnummern ein
+  % abschließender Punkt (siehe [DUD96, R4])
   numbers=autoendperiod,
   a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
   twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
-  %               idxtotoc,   %Index ins Inhaltsverzeichnis
-  %               liststotoc, %List of X ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
+  %               idxtotoc,   % Index ins Inhaltsverzeichnis
+  %               liststotoc, % List of X ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
   headsepline,
   cleardoublepage=empty,
   parskip=half,
@@ -46,8 +46,12 @@
 
 \begin{document}
 
-\<%= heading1 %>{LaTeX Hinweise}
+<%= heading1 %>{LaTeX Hinweise}
 \label{chap:latexhints}
+
+Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
+
+
 
 <%- include('figure.de.example.tex', this); %>
 
