--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 
-\<%= heading1 %>{LaTeX Hints}
+<%= heading1 %>{LaTeX Hints}
 \label{chap:latexhints}
 
 One sentence per line.
