Add some example text

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -42,7 +42,7 @@
 <%- include('babel.preamble.tex', this); %>
 <%- include('url.de.preamble.tex', this); %>
 <%- include('hyperref.en.preamble.tex', this); %>
-<% if (cleveref) { %><%- include('cleveref.de.preamble.tex', this); %><% } -%>
+<% if (cleveref) { %><%- include('cleveref.de.preamble.tex', this); %><% } %>
 
 \begin{document}
 
@@ -51,7 +51,27 @@
 
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
+<%= heading2 %>{Trennung von Absätzen}
 
+Pro Satz eine neue Zeile.
+Das ist wichtig, um sauber versionieren zu können.
+In LaTeX werden Absätze durch eine Leerzeile getrennt.
+Analogie zu Word: Bei Word werden neue Absätze durch einmal Eingabetaste gemacht.
+Dies führt bei LaTeX jedoch nicht zu einem neuen Absatz, da LaTeX direkt aufeinanderfolgende Zeilen zu einer Zeile zusammenfügt.
+Möchte man nun einen Absatz haben, muss man zweimal die Eingabetaste drücken.
+Dies führt zu einer leeren Zeile.
+In Word gibt es die Funktion Großschreibetaste und Eingabetaste gleichzeitig.
+Wenn man dies drückt, wird einer harter Umbruch erzwungen.
+Der Text fängt am Anfang der neuen Zeile an.
+In LaTeX erreicht man dies durch Doppelbackslashes (\textbackslash\textbackslash) erzeugt.
+Dies verwendet man quasi nie.
+
+Folglich werden neue Abstäze insbesondere \emph{nicht} durch Doppelbackslashes erzeugt.
+Beispielsweise begann der letzte Satz in einem neuen Absatz.
+Eine ausführliche Motivation hierfür findet sich in \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
+
+Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption \texttt{parskip} verwenden.
+Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
 
 <%- include('figure.de.example.tex', this); %>
 
