--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -30,12 +30,17 @@
 <%- include('url.en.preamble.tex', this); %>
 <%- include('font.en.preamble.tex', this); %>
 <%- include('hyperref.en.preamble.tex', this); %>
-<% if (cleveref) { %><%- include('cleveref.en.preamble.tex', this); %><% } -%>
+<% if (cleveref) { %><%- include('cleveref.en.preamble.tex', this); %><% } %>
 
 \begin{document}
 
 <%= heading1 %>{LaTeX Hints}
 \label{chap:latexhints}
+
+This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> contains hints on writing LaTeX.
+It focuses on minimal examples, which can be directly adapted to the content
+
+<%= heading2 %>{Handling of paragraphs}
 
 One sentence per line.
 This rule is important for the usage of version control systems.
