Change filename pattern to `.preamble.en.tex`

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -38,11 +38,12 @@
   draft=false
 ]{scrbook}
 
-<%- include('microtype.de.preamble.tex', this); %>
+<%- include('microtype.preamble.de.tex', this); %>
 <%- include('babel.preamble.tex', this); %>
-<%- include('url.de.preamble.tex', this); %>
-<%- include('hyperref.en.preamble.tex', this); %>
-<% if (cleveref) { %><%- include('cleveref.de.preamble.tex', this); %><% } %>
+<%- include('url.preamble.de.tex', this); %>
+<%- include('font.preamble.en.tex', this); %>
+<%- include('hyperref.preamble.en.tex', this); %>
+<% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } %>
 
 \begin{document}
 
@@ -73,6 +74,6 @@ Eine ausführliche Motivation hierfür findet sich in \url{http://loopspace.math
 Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption \texttt{parskip} verwenden.
 Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
 
-<%- include('figure.de.example.tex', this); %>
+<%- include('figure.example.en.tex', this); %>
 
 \end{document}
