--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -25,12 +25,12 @@
   draft=false
 ]{scrbook}
 
-<%- include('microtype.en.preamble.tex', this); %>
+<%- include('microtype.preamble.en.tex', this); %>
 <%- include('babel.preamble.tex', this); %>
-<%- include('url.en.preamble.tex', this); %>
-<%- include('font.en.preamble.tex', this); %>
-<%- include('hyperref.en.preamble.tex', this); %>
-<% if (cleveref) { %><%- include('cleveref.en.preamble.tex', this); %><% } %>
+<%- include('url.preamble.en.tex', this); %>
+<%- include('font.preamble.en.tex', this); %>
+<%- include('hyperref.preamble.en.tex', this); %>
+<% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } %>
 
 \begin{document}
 
@@ -60,6 +60,6 @@ Please do \textit{not} use two backslashes for new paragraphs.
 For instance, this sentence belongs to the same paragraph, whereas the last one started a new one.
 A long motivation for that is provided at \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
 
-<%- include('figure.en.example.tex', this); %>
+<%- include('figure.example.en.tex', this); %>
 
 \end{document}
