Fix cleveref name for singular listing

--- a/generators/app/templates/cleveref.preamble.en.tex
+++ b/generators/app/templates/cleveref.preamble.en.tex
@@ -1,5 +1,5 @@
 % Extensions for references inside the document (\cref{fig:sample}, ...)
 \usepackage[capitalise,nameinlink,noabbrev]{cleveref}
 
-\crefname{listing}{\lstlistingname}{\lstlistingname}
+\crefname{listing}{Listing}{Listing}
 \Crefname{listing}{Listing}{Listings}
