Add showexpl and make cleveref usage more readable

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -42,8 +42,11 @@
 <%- include('babel.preamble.tex', this); %>
 <%- include('url.preamble.de.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
+<%- include('listings.preamble.en.tex', this); %>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } %>
+
+\usepackage{showexpl}
 
 \begin{document}
 
@@ -75,5 +78,6 @@ Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption 
 Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
 
 <%- include('figure.example.en.tex', this); %>
+<%- include('listings.example.de.tex', this); %>
 
 \end{document}
