--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -32,6 +32,8 @@
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } %>
 
+\usepackage{showexpl}
+
 \begin{document}
 
 <%= heading1 %>{LaTeX Hints}
@@ -61,5 +63,6 @@ For instance, this sentence belongs to the same paragraph, whereas the last one 
 A long motivation for that is provided at \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
 
 <%- include('figure.example.en.tex', this); %>
+<%- include('listings.example.de.tex', this); %>
 
 \end{document}
