Switch to showexpl.sty

--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -1,16 +1,17 @@
 <%= heading2 %>{Figures}
 
+\begin{WSample}
 <% if (cleveref) { -%>
 \Cref{fig:label} shows something interesting.
 <% } else { -%>
 Figure~\ref{fig:label} shows something interesting.
 <% } -%>
 
-\begin{LTXexample}
 \begin{figure}
   \centering
   Place your figure here
   \caption{The example figure.}
   \label{fig:label}
 \end{figure}
-\end{LTXexample}
+\end{WSample}
+\PexaShowBoth{}
