--- a/generators/app/templates/listings.example.de.tex
+++ b/generators/app/templates/listings.example.de.tex
@@ -1,8 +1,12 @@
 <%= heading2 %>{Quellcode}
 
+\begin{WSample}
+<% if (cleveref) { -%>
 \Cref{lst:XML} zeigt XML-Quelltext.
+<% } else { -%>
+Listing~\ref{fig:label} zeigt XML-Quelltext.
+<% } -%>
 
-\begin{LTXexample}
 \begin{lstlisting}[
   language=XML,
   float,
@@ -13,4 +17,5 @@
   <content>not interesting</content>
 </listing>
 \end{lstlisting}
-\end{LTXexample}
+\end{WSample}
+\PexaShowBoth{}
