--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -1,12 +1,12 @@
 <%= heading2 %>{Source Code}
 
+\begin{WSample}
 <% if (cleveref) { -%>
 \Cref{lst:XML} shows source code written in XML.
 <% } else { -%>
 Listing~\ref{fig:label} shows source code written in XML.
 <% } -%>
 
-\begin{LTXexample}
 \begin{lstlisting}[
   language=XML,
   float,
@@ -17,4 +17,5 @@ Listing~\ref{fig:label} shows source code written in XML.
   <content>not interesting</content>
 </listing>
 \end{lstlisting}
-\end{LTXexample}
+\end{WSample}
+\PexaShowBoth{}
