--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -3,11 +3,14 @@
   <% if (font == "arial") { -%>
 \setmainfont{Arial}
   <% } else if (font == "times") { -%>
-\setmainfont{TeXGyreTermes-Regular}[
-      BoldFont       = TeXGyreTermes-Bold ,
-      ItalicFont     = TeXGyreTermes-Italic ,
-      BoldItalicFont = TeXGyreTermes-BoldItalic,
-      NFSSFamily     = ntxtlf]
+\setmainfont{texgyretermes}[
+  Extension = .otf,
+  UprightFont = *-regular,
+  BoldFont = *-bold,
+  ItalicFont = *-italic,
+  BoldItalicFont = *-bolditalic,
+  Ligatures=TeX
+]
 \setsansfont[Scale=.9]{TeX Gyre Heros Regular}
 \setmonofont[StylisticSet={1,3},Scale=.9]{inconsolata}
 \RequirePackage{newtxmath}
@@ -15,12 +18,28 @@
   <% } -%>
 <% } else { -%>
   <% if (font == "arial") { -%>
-  <% } else { -%>
+% EN: Headings are typset in Helvetica (which is similar to Arial)
+% DE: Schriftart fuer die Ueberschriften - ueberschreibt lmodern
+\usepackage[scaled=.95]{helvet}
+  <% } else if (font == "times") { -%>
 \RequirePackage{newtxtext}
 \RequirePackage{newtxmath}
+\RequirePackage[zerostyle=b,scaled=.9]{newtxtt}
 % EN: looks good with times, but no equivalent for lualatex found,
-%     therefore replaced with inconsolata
+%     therefore could/should replaced with inconsolata
 %\RequirePackage[zerostyle=b,scaled=.9]{newtxtt}
 \RequirePackage[varl,scaled=.9]{inconsolata}
-  <% } -%>
+  <% } else { -%>
+% This is the modern package for "Computer Modern".
+% In case this gets activated, one has to switch from cmap package to glyphtounicode (in the case of pdflatex)
+\usepackage[%
+    rm={oldstyle=false,proportional=true},%
+    sf={oldstyle=false,proportional=true},%
+    tt={oldstyle=false,proportional=true,variable=true},%
+    qt=false%
+]{cfr-lm}
 <% } -%>
+% Has to be loaded AFTER any font packages. See https://tex.stackexchange.com/a/2869/9075.
+\usepackage[T1]{fontenc}
+<% } -%>
+
