Remove "float" from listing

--- a/generators/app/templates/listings.example.de.tex
+++ b/generators/app/templates/listings.example.de.tex
@@ -9,7 +9,6 @@ Listing~\ref{fig:label} zeigt XML-Quelltext.
 
 \begin{lstlisting}[
   language=XML,
-  float,
   caption={Beispiel-XML-Listing},
   label={lst:XML}]
 <listing name="first sample">
@@ -19,3 +18,5 @@ Listing~\ref{fig:label} zeigt XML-Quelltext.
 \end{lstlisting}
 \end{WSample}
 \PexaShowBoth{}
+
+Der zusätzliche Paramter \verb+float+ führt dazu, dass das Listing auch floatet.
