--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -9,7 +9,6 @@ Listing~\ref{fig:label} shows source code written in XML.
 
 \begin{lstlisting}[
   language=XML,
-  float,
   caption={Example XML Listing},
   label={lst:XML}]
 <listing name="first sample">
@@ -19,3 +18,5 @@ Listing~\ref{fig:label} shows source code written in XML.
 \end{lstlisting}
 \end{WSample}
 \PexaShowBoth{}
+
+One can also add \verb+float+ as paramter to have the listing floating.
