First working version with examplep

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -35,7 +35,9 @@
 \usepackage[%
     rm={oldstyle=false,proportional=true},%
     sf={oldstyle=false,proportional=true},%
-    tt={oldstyle=false,proportional=true,variable=true},%
+    % By using 'variable=true' the monospaced font can be used as variable font (with differents widths per letter)
+    % However, this makes listings look ugly.
+    tt={oldstyle=false,proportional=true,variable=false},%
     qt=false%
 ]{cfr-lm}
 <% } -%>
