--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -40,8 +40,8 @@
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } %>
 
-\usepackage{examplep}
-\PexaDefaults{listings={language=[AlLaTeX]TeX,basicstyle=\ttfamily}}
+\usepackage[listings=yes,listings-verbatimfont=ttfamily]{examplep}
+\lstset{language=[AlLaTeX]TeX}
 
 \begin{document}
 
