--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -38,6 +38,10 @@
   draft=false
 ]{scrbook}
 
+<% if (latexcompiler == "pdflatex") { -%>
+\usepackage{cmap}
+<% } -%>
+
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
 % Details unter:
 %   - https://tex.stackexchange.com/a/341057/9075
