--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -25,6 +25,17 @@
   draft=false
 ]{scrbook}
 
+<% if (latexcompiler == "pdflatex") { -%>
+% Enable copy and paste of text from the PDF
+% Only required for pdflatex. It "just works" in the case of lualatex.
+% mmap enables mathematical symbols, but does not work with the newtx font set
+% See: https://tex.stackexchange.com/a/64457/9075
+% Other solutions outlined at http://goemonx.blogspot.de/2012/01/pdflatex-ligaturen-und-copynpaste.html and http://tex.stackexchange.com/questions/4397/make-ligatures-in-linux-libertine-copyable-and-searchable
+% Trouble shooting outlined at https://tex.stackexchange.com/a/100618/9075
+\usepackage{cmap}
+% TODO: check font
+<% } -%>
+
 % backticks (`) are rendered as such in verbatim environments.
 % See following links for details:
 %   - https://tex.stackexchange.com/a/341057/9075
