--- a/generators/app/templates/babel.preamble.tex
+++ b/generators/app/templates/babel.preamble.tex
@@ -12,8 +12,7 @@
 % Hint by http://tex.stackexchange.com/a/321066/9075 -> enable "= as dashes
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
 
-
-<% if (documentclass === "lns") { -%>
+<% if (documentclass === "lncs") { -%>
 % Fix by https://tex.stackexchange.com/a/441701/9075
 \usepackage{regexpatch}
 \makeatletter
