--- a/generators/app/templates/paragraphs.example.de.tex
+++ b/generators/app/templates/paragraphs.example.de.tex
@@ -1,12 +1,12 @@
 <%= heading2 %>{Trennung von Absätzen}
 
-\begin{WBoth}
+<% if (useExampleEnvironment) {%>\begin{example}<% } -%>
 Pro Satz eine neue Zeile.
 Das ist wichtig, um sauber versionieren zu können.
 In LaTeX werden Absätze durch eine Leerzeile getrennt.
-Analogie zu Word: Bei Word werden neue Absätze durch einmal Eingabetaste gemacht.
+Analogie zu Word: Bei Word werden neue Absätze durch einmal Eingabetaste herbeigeführt.
 Dies führt bei LaTeX jedoch nicht zu einem neuen Absatz, da LaTeX direkt aufeinanderfolgende Zeilen zu einer Zeile zusammenfügt.
-Möchte man nun einen Absatz haben, muss man zweimal die Eingabetaste drücken.
+Mächte man nun einen Absatz haben, muss man zweimal die Eingabetaste drücken.
 Dies führt zu einer leeren Zeile.
 In Word gibt es die Funktion Großschreibetaste und Eingabetaste gleichzeitig.
 Wenn man dies drückt, wird einer harter Umbruch erzwungen.
@@ -17,13 +17,7 @@ Dies verwendet man quasi nie.
 Folglich werden neue Abstäze insbesondere \emph{nicht} durch Doppelbackslashes erzeugt.
 Beispielsweise begann der letzte Satz in einem neuen Absatz.
 Eine ausführliche Motivation hierfür findet sich in \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
-\end{WBoth}
-
-\input{pexa-src.tex}
-
-Source code for the above text:
-
-\PexaShowSource{}
+<% if (useExampleEnvironment) {%>\end{example}<% } -%>
 
 Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption \texttt{parskip} verwenden.
 Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
