Use example environment also in paragraphs.example.en.tex

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -56,6 +56,7 @@
 
 \begin{document}
 
+<% if (examples) { -%>
 <%= heading1 %>{LaTeX Hints}
 \label{chap:latexhints}
 
@@ -63,7 +64,8 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
-<%- include('figure.example.en.tex', this); %>
-<%- include('listings.example.en.tex', this); %>
+<%- // include('figure.example.en.tex', this); %>
+<%- // include('listings.example.en.tex', this); %>
+<% } -%>
 
 \end{document}
