--- a/generators/app/templates/paragraphs.example.de.tex
+++ b/generators/app/templates/paragraphs.example.de.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Trennung von Absätzen}
 
-<% if (useExampleEnvironment) {%>\begin{example}<% } -%>
+<% if (useExampleEnvironment) {%>\begin{example}<% } %>
 Pro Satz eine neue Zeile.
 Das ist wichtig, um sauber versionieren zu können.
 In LaTeX werden Absätze durch eine Leerzeile getrennt.
@@ -17,7 +17,9 @@ Dies verwendet man quasi nie.
 Folglich werden neue Abstäze insbesondere \emph{nicht} durch Doppelbackslashes erzeugt.
 Beispielsweise begann der letzte Satz in einem neuen Absatz.
 Eine ausführliche Motivation hierfür findet sich in \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
-<% if (useExampleEnvironment) {%>\end{example}<% } -%>
+<% if (useExampleEnvironment) {%>\end{example}<% } %>
 
+<% if (documentclass === 'scientific-thesis') { -%>
 Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption \texttt{parskip} verwenden.
 Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
+<% } -%>
