--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -4,18 +4,18 @@
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
 
-<% if (documentclass === 'scientific-thesis') { %>
+<% if (documentclass === 'scientific-thesis') { -%>
 % The following package allows \\ at the title page
 % For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
-<% } %>
+<% } -%>
 
-<% if (latexcompiler !== 'lualatex') { %>
+<% if (latexcompiler !== 'lualatex') { -%>
 % Neue deutsche Trennmuster
 % Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
 % Nur für pdflatex, nicht für lualatex
 \RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
-<% } %>
+<% } -%>
 
 \documentclass[
   % fontsize=11pt is the standard
