--- a/generators/app/templates/paragraphs.example.en.tex
+++ b/generators/app/templates/paragraphs.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Handling of paragraphs}
 
-\begin{WBoth}
+<% if (useExampleEnvironment) {%>\begin{example}<% } %>
 One sentence per line.
 This rule is important for the usage of version control systems.
 A new line is generated with a blank line.
@@ -18,10 +18,4 @@ This is rarely used.
 Please do \textit{not} use two backslashes for new paragraphs.
 For instance, this sentence belongs to the same paragraph, whereas the last one started a new one.
 A long motivation for that is provided at \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
-\end{WBoth}
-
-\input{pexa-src.tex}
-
-Source code for the above text:
-
-\PexaShowSource{}
+<% if (useExampleEnvironment) {%>\end{example}<% } %>
