--- a/generators/app/templates/paragraphs.example.en.tex
+++ b/generators/app/templates/paragraphs.example.en.tex
@@ -12,7 +12,7 @@ This leads to an empty line.
 In word, there is the functionality to press shift and enter.
 This leads to a hard line break.
 The text starts at the beginning of a new line.
-In LaTeX, you can do that by using two backslashes (\textbackslash\textbackslash).
+In LaTeX, you can do that by using two backslashes (\textbackslash\textbackslash).\\
 This is rarely used.
 
 Please do \textit{not} use two backslashes for new paragraphs.
