--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -49,7 +49,7 @@
 %   - https://tex.stackexchange.com/a/166791/9075
 \usepackage{upquote}
 
-<%- include('babel.preamble.tex', this); %>
+<%- include('babel.preamble.de.tex', this); %>
 <%- include('url.preamble.de.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
 <%- include('microtype.preamble.de.tex', this); %>
