--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -43,7 +43,7 @@
 %   - https://tex.stackexchange.com/a/166791/9075
 \usepackage{upquote}
 
-<%- include('babel.preamble.tex', this); %>
+<%- include('babel.preamble.en.tex', this); %>
 <%- include('url.preamble.en.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
 <%- include('microtype.preamble.en.tex', this); %>
