Add bexample and eexample

--- a/generators/app/templates/figure.example.de.tex
+++ b/generators/app/templates/figure.example.de.tex
@@ -1,6 +1,6 @@
-\<%= heading2 %>{Abbildungen}
+<%= heading2 %>{Abbildungen}
 
-\begin{WSample}
+<%- bexample %>
 <% if (cleveref) { -%>
 \Cref{fig:label} zeigt etwas Interessantes
 <% } else { -%>
@@ -13,5 +13,4 @@ Figure~\ref{fig:label} zeigt etwas Interessantes.
   \caption{Bildunterschrift.}
   \label{fig:label}
 \end{figure}
-\end{WSample}
-\PexaShowBoth{}
+<%- eexample %>
