--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Figures}
 
-\begin{WSample}
+<%- bexample %>
 <% if (cleveref) { -%>
 \Cref{fig:label} shows something interesting.
 <% } else { -%>
@@ -13,5 +13,4 @@ Figure~\ref{fig:label} shows something interesting.
   \caption{The example figure.}
   \label{fig:label}
 \end{figure}
-\end{WSample}
-\PexaShowBoth{}
+<%- eexample %>
