--- a/generators/app/templates/listings.example.de.tex
+++ b/generators/app/templates/listings.example.de.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Quellcode}
 
-\begin{WSample}
+<%- bexample %>
 <% if (cleveref) { -%>
 \Cref{lst:XML} zeigt XML-Quelltext.
 <% } else { -%>
@@ -16,7 +16,6 @@ Listing~\ref{fig:label} zeigt XML-Quelltext.
   <content>not interesting</content>
 </listing>
 \end{lstlisting}
-\end{WSample}
-\PexaShowBoth{}
+<%- eexample %>
 
 Der zusätzliche Paramter \verb+float+ führt dazu, dass das Listing auch floatet.
