--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Source Code}
 
-\begin{WSample}
+<%- bexample %>
 <% if (cleveref) { -%>
 \Cref{lst:XML} shows source code written in XML.
 <% } else { -%>
@@ -16,7 +16,6 @@ Listing~\ref{fig:label} shows source code written in XML.
   <content>not interesting</content>
 </listing>
 \end{lstlisting}
-\end{WSample}
-\PexaShowBoth{}
+<%- eexample %>
 
 One can also add \verb+float+ as paramter to have the listing floating.
