--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -97,8 +97,8 @@
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
 <%- include('paragraphs.example.de.tex', this); %>
-<%- // include('figure.example.de.tex', this); %>
-<%- // include('listings.example.de.tex', this); %>
+<%- include('figure.example.de.tex', this); %>
+<%- include('listings.example.de.tex', this); %>
 <% } -%>
 
 \end{document}
