--- a/generators/app/templates/paragraphs.example.en.tex
+++ b/generators/app/templates/paragraphs.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Handling of paragraphs}
 
-<% if (useExampleEnvironment) {%>\begin{example}<% } %>
+<%- bexample %>
 One sentence per line.
 This rule is important for the usage of version control systems.
 A new line is generated with a blank line.
@@ -18,4 +18,4 @@ This is rarely used.
 Please do \textit{not} use two backslashes for new paragraphs.
 For instance, this sentence belongs to the same paragraph, whereas the last one started a new one.
 A long motivation for that is provided at \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
-<% if (useExampleEnvironment) {%>\end{example}<% } %>
+<%- eexample %>
