--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -92,8 +92,8 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
-<%- // include('figure.example.en.tex', this); %>
-<%- // include('listings.example.en.tex', this); %>
+<%- include('figure.example.en.tex', this); %>
+<%- include('listings.example.en.tex', this); %>
 <% } -%>
 
 \end{document}
