--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -4,14 +4,14 @@
 <% if (cleveref) { -%>
 \Cref{lst:XML} shows source code written in XML.
 <% } else { -%>
-Listing~\ref{fig:label} shows source code written in XML.
+Listing~\ref{lst:XML} shows source code written in XML.
 <% } -%>
 
 \begin{lstlisting}[
   language=XML,
   caption={Example XML Listing},
   label={lst:XML}]
-<listing name="first sample">
+<listing name="example">
   <!-- comment -->
   <content>not interesting</content>
 </listing>
@@ -19,3 +19,20 @@ Listing~\ref{fig:label} shows source code written in XML.
 <%- eexample %>
 
 One can also add \verb+float+ as paramter to have the listing floating.
+<% if (cleveref) { -%>
+\Cref{lst:flXML} shows the floating listing.
+<% } else { -%>
+Listing~\ref{lst:flXML} shows the floating listing.
+<% } -%>
+
+<%- bexample %>
+\begin{lstlisting}[
+  float,
+  language=XML,
+  caption={Example XML Listing -- placed as floating figure},
+  label={lst:flXML}]
+<listing name="example">
+  Floating
+</listing>
+\end{lstlisting}
+<%- eexample %>
