--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -20,4 +20,6 @@
   captionpos=b
 }
 
+% Ermögliche Umlaute when using \lstinputputlisting
+% Siehe https://ctan.org/pkg/listingsutf8?lang=de für Details
 \usepackage{listingsutf8}
