--- a/generators/app/templates/listings.preamble.en.tex
+++ b/generators/app/templates/listings.preamble.en.tex
@@ -20,4 +20,6 @@
   captionpos=b
 }
 
+% Enable umlauts when using \lstinputlisting
+% See https://ctan.org/pkg/listingsutf8 for details
 \usepackage{listingsutf8}
